syntax = "proto3";

package vink.kubevm.io.apis.types;

option go_package = "github.com/kubevm.io/vink/apis/types";

message NamespaceName {
    string namespace = 1;
    string name = 2;
}

message FieldSelector {
    string field_path = 1;
    string operator = 2;
    repeated string values = 3;
}

message FieldSelectorGroup {
	string operator = 1;
	repeated FieldSelector field_selectors = 2;
}

enum ResourceType {
	UNSPECIFIED = 0;
	VIRTUAL_MACHINE = 1;
	VIRTUAL_MACHINE_INSTANCE = 2;
	DATA_VOLUME = 3;
	NODE = 4;
	NAMESPACE = 5;
	MULTUS = 6;
	SUBNET = 7;
	VPC = 8;
	IPPOOL = 9;
	STORAGE_CLASS = 10;
	IPS = 11;
	VIRTUAL_MACHINE_SUMMARY = 12;
	EVENT = 13;
}
